fixed ffa victor details alignment

--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -86,6 +86,11 @@ body.halo4_game_history {
 								}
 							}
 						}
+
+						> .ffa-victor {
+							width: 300px;
+							margin: 0 auto;
+						}
 					}
 				}
 			}
